<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="254dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="14sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/old_Password"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/old"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/canvi_Passw"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/canvi_contrasenya"
            android:inputType="none|textPersonName|textEmailAddress"
            android:textAlignment="center"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textPulsaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/torna_pulsar"
            android:textAlignment="center"
            android:textSize="20dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/confirma"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/confirmar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ProductesHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_border"
                android:text="@string/pr_home" />

            <Button
                android:id="@+id/btn_Productes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_border"
                android:text="@string/pr_dona" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/elimina"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/delete" />

        <Button
            android:id="@+id/actualitza"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:paddingEnd="10dp"
            android:text="@string/update" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logOut"
        android:text="@string/log_out" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="revoke"
        android:text="@string/revoke" />

</LinearLayout>